Address PR #103 review findings (53 comments)
FIXED (19 items):
- LinkingContext: freeze() now deep-wraps inner maps as unmodifiable (not just outer map)
- CallSiteBindingRule: throw on non-IrReg in REF/LREF operands (defensive invariant)
- RegAnalysisHandler: error message excludes forbidden banks (FDR/FLR) from valid ranges
- RegisterAliasEmissionContributor: bounds check + NFE handling for malformed register tokens
- Instruction.resolveRegToken(): reject out-of-range register indices (e.g. %DR999)
- LocationInstruction CRLR: use env.properties.getDimensions() instead of hardcoded {0,0}
- LocationInstruction PSLI/LRLI: add ops.isEmpty()/ops.size() guards (defensive, like SKJ)
- Organism ProcFrame JavaDoc: removed "Phase G" reference (self-contained per AGENTS.md)
- Lexer JavaDoc: updated register list to reference RegisterBank generically
- IInstructionSet ArgKind JavaDoc: added all 8 banks (was only DR/PDR/FDR and LR)
- IRegisterAlias: added @return tag
- CallBindingRegistry: Map.copyOf() instead of Collections.unmodifiableMap() (defensive copy)
- metadata_contracts.proto: CallSiteBinding bindings field renumbered to 2 (sequential)
- ParameterTokenHandler.js: bankSpecificIndex counts preceding same-bank params (robust for mixed order)
- OrganismSourceView.js: trailing "at " removed when absoluteCallIp unavailable
- OrganismStateView.js: numeric ParamType mappings corrected (2=LREF, 3=LVAL after renumbering)
- AnnotationUtils.js formatRegisterName(): bounds check, unknown IDs show "?<id>" instead of "%DR<id>"
- tickdata_contracts.proto: updated comments to reflect 8-bank model
- VMControlFlowInstructionTest: removed stale bug-description comments

TEST IMPROVEMENTS (10 items):
- LinkingContextFreezeTest: inner map immutability assertion added (mutable seed map)
- CallStatementHandlerTest: added LREF/LVAL parsing test
- RegisterAliasEmissionContributorTest: added PLR/FLR/SDR/SLR alias resolution tests
- VMLocationInstructionTest: invalid LR index derived from Confi